<resources>
    <string name="app_name">Humblr</string>
    <string name="title_subreddits">Subreddits</string>
    <string name="title_favourites">Favourites</string>
    <string name="title_profile">Profile</string>
    <string name="title_activity_on_boarding">OnBoardingActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="on_boarding_heading1">Welcome to Humblr</string>
    <string name="on_boarding_text1">Communities of all kinds of interests are gathered here</string>
    <string name="on_boarding_heading2">SubHumblr</string>
    <string name="on_boarding_text2">You can find new subs by interests and see the subs you are subscribed to</string>
    <string name="on_boarding_heading3">Share and save</string>
    <string name="on_boarding_text3">The favorites tab stores bookmarks with comments and subs. In the profile you will find information about yourself.</string>
    <string name="enter">Enter</string>
    <string name="text_auth">Find Like-minded People with Humblr</string>
    <string name="auth_canceled">Authentication failed</string>
    <string name="new_string">New</string>
    <string name="popular">Popular</string>
    <string name="subscribe_button">Subscribe Button</string>
    <string name="subreddit_description">Subreddit Description</string>
    <string name="about_community">About Community</string>
    <string name="created">Created %1$s</string>
    <string name="since">Since %1$s</string>
    <string name="karma">Karma: %1$s</string>
    <string name="subscribers">Subscribers: %1$s</string>
    <string name="you_are_subscribed"><u>You are subscribed: %1$s</u></string>
    <string name="yes">Yes</string>
    <string name="no"> No</string>
    <string name="change"><u>change</u></string>
    <string name="toolbar_feed">%1$s - FEED</string>
    <string name="toolbar_info">ABOUT %1$s</string>
    <string name="share_url">Share URL</string>
    <string name="back_to_subreddit">Back to Subreddit</string>
    <string name="chip_comments">Comments</string>
    <string name="comments">Comments: %1$s</string>
    <string name="failed">Failed</string>
    <string name="loading_failed">Loading failed</string>
    <string name="saving_failed">Saving failed</string>
    <string name="post_saved">Post saved</string>
    <string name="save"><u>Save</u></string>
    <string name="createdDate">Created</string>
    <string name="show_all">Show All</string>
    <string name="make_friends"><u>Make friends</u></string>
    <string name="not_a_friend">Not A Friend</string>
    <string name="is_a_friend">Is A Friend</string>
    <string name="delete_saved">Delete Saved</string>
    <string name="friends">Friends</string>
    <string name="deleted">Deleted</string>
    <string name="error_try_later">Error occurred, please try later</string>
    <string name="comment_saved">Comment saved</string>
    <string name="chip_posts">Posts</string>
    <string name="all">All</string>
    <string name="saved">Saved</string>
    <string name="comment_already_saved">Comment already saved</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="first_screen_title">Welcome to Humblr</string>
    <string name="skip">Skip</string>
    <string name="first_screen_desc">Humblr is a network of communities for everyone</string>
    <string name="second_screen_title" translatable="false">SubHumblr</string>
    <string name="second_screen_desc">Look for subs of interest and follow subs you are subscribed to</string>
    <string name="third_screen_desc">You always find your saved posts and comments on Favorites tab</string>
    <string name="third_screen_title">Share and save</string>
    <string name="finish">Finish</string>
    <string name="login">Login</string>
    <string name="auth_desc">Find your community</string>
    <string name="logout">Logout</string>
    <string name="want_logout">Do you really wan\'t to logout?</string>
    <string name="success">SUCCESS</string>
    <string name="failure">FAILURE</string>
    <string name="search">Search</string>


</resources>