<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"

    tools:context=".ui.my_profile.MyProfileFragment">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="100dp"
        android:background="@color/transparent"
        android:indeterminate="true"
        android:indeterminateTint="@color/secondary"
        android:indeterminateTintMode="src_atop"
        android:visibility="visible" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/mainView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:orientation="vertical"
        android:visibility="gone">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="6dp"
                android:background="@color/white"
                app:cardCornerRadius="5dp"
                app:strokeColor="@color/secondary"
                app:strokeWidth="1dp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:orientation="horizontal">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/userIcon"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_gravity="start|center"
                        android:layout_margin="8dp"
                        android:src="@drawable/baseline_person_pin_24"
                        app:cornerRadius="28dp"
                        app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.ExtraLarge" />

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:orientation="vertical"
                        android:padding="6dp">

                        <TextView
                            android:id="@+id/userName"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:padding="6dp"
                            android:text="User Name"
                            android:textColor="@color/secondary"
                            android:textSize="15sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/created"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="6dp"
                            android:text="@string/karma"
                            android:textSize="13sp" />

                        <TextView
                            android:id="@+id/karma"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="6dp"
                            android:text="@string/created"
                            android:textSize="13sp" />


                    </androidx.appcompat.widget.LinearLayoutCompat>
                </androidx.appcompat.widget.LinearLayoutCompat>


            </com.google.android.material.card.MaterialCardView>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/deleteSavedButton"
                style="?attr/materialButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="12dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="12dp"
                android:layout_weight="0.1"
                android:backgroundTint="@color/secondary"
                android:paddingStart="6dp"
                android:text="@string/delete_saved"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:textStyle="bold"
                app:cornerRadius="10dp"
                app:rippleColor="#3352378C"
                app:strokeColor="#C0B3E3"
                app:strokeWidth="2dp" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/logoutButton"
                style="?attr/materialButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="12dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="12dp"
                android:layout_weight="0.1"
                android:backgroundTint="@color/secondary"
                android:paddingStart="6dp"
                android:text="@string/logout"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:textStyle="bold"
                app:cornerRadius="10dp"
                app:rippleColor="#3352378C"
                app:strokeColor="#C0B3E3"
                app:strokeWidth="2dp" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:layout_gravity="end|center"
                android:background="@color/white"
                app:cardCornerRadius="5dp"
                app:strokeColor="@color/secondary"
                app:strokeWidth="1dp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center"
                    android:orientation="vertical">

                <TextView
                    android:id="@+id/myFriends"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginEnd="12dp"
                    android:padding="6dp"
                    android:text="@string/friends"
                    android:textSize="18sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/friendsRecycler"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:layout_marginTop="8dp"
                    android:nestedScrollingEnabled="false"
                    android:orientation="vertical"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:spanCount="2"
                    tools:listitem="@layout/friend_item" />
                </androidx.appcompat.widget.LinearLayoutCompat>
            </com.google.android.material.card.MaterialCardView>
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.core.widget.NestedScrollView>
</androidx.appcompat.widget.LinearLayoutCompat>