<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/infoProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="100dp"
        android:background="@color/transparent"
        android:visibility="visible"
        android:indeterminate="true"
        android:indeterminateTint="@color/secondary"
        android:indeterminateTintMode="src_atop" />

    <ScrollView
        android:id="@+id/mainView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone"
        android:paddingBottom="48dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".presentation.subreddit_description.SubredditDescriptionFragment">


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/myToolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                app:navigationIcon="@drawable/back_arrow"
                app:subtitleTextAppearance="@style/Theme.AppCompat.DayNight.DialogWhenLarge"
                app:titleTextColor="@color/white">

                <TextView
                    android:id="@+id/toolbar_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="21sp" />


            </androidx.appcompat.widget.Toolbar>

            <ImageView
                android:id="@+id/bannerImage"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:maxHeight="150dp"
                android:scaleType="centerCrop"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cardView"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:elevation="12dp"
                    app:cardCornerRadius="40dp">

                    <ImageView
                        android:id="@+id/iconImage"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:scaleType="centerCrop"
                        android:visibility="gone" />
                </com.google.android.material.card.MaterialCardView>

                <TextView
                    android:id="@+id/subredditTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:padding="12dp"
                    android:textColor="@android:color/black"
                    android:textSize="21sp"
                    android:textStyle="bold" />


            </LinearLayout>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/communityCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:elevation="12dp"
                android:padding="6dp"
                app:cardCornerRadius="24dp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/about"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:background="@color/secondary"
                        android:gravity="center_vertical"
                        android:paddingStart="13dp"
                        android:text="@string/about_community"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:padding="12dp"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/created"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="12dp"
                        android:text="@string/created"
                        android:textSize="16sp" />


                    <TextView
                        android:id="@+id/subscribersCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="12dp"
                        android:text="@string/subscribers"
                        android:textSize="16sp" />

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/subscriberStatus"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:padding="12dp"
                            android:paddingEnd="0dp"
                            android:text="@string/you_are_subscribed"
                            android:textSize="18sp" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/changeSubscriptionButton"
                            style="?attr/materialButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start"
                            android:layout_marginEnd="40dp"
                            android:layout_weight="0.1"
                            android:backgroundTint="#33ECEAF1"
                            android:paddingStart="6dp"
                            android:text="@string/change"
                            android:textColor="#565677"
                            android:textSize="13sp"
                            app:cornerRadius="6dp"
                            app:rippleColor="#3352378C"
                            app:strokeColor="#C0B3E3"
                            app:strokeWidth="2dp" />


                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <ImageView
                        android:id="@+id/shareIcon"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:layout_gravity="start"
                        android:layout_marginTop="8dp"
                        android:background="@color/secondary"
                        android:clickable="true"
                        android:padding="5dp"
                        android:paddingStart="25dp"
                        android:scaleType="fitStart"
                        android:src="@drawable/share_icon" />
                </androidx.appcompat.widget.LinearLayoutCompat>
            </com.google.android.material.card.MaterialCardView>
        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>
</FrameLayout>